src/objects/CPQ_Country_Master_Data__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <description>CPQ-IQ-LC-12421: This filed capture List of all eligible countries.</description>
        <label>Country</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>CPQ-IQ-LC-12421: This field capture all the languages of related countries.</description>
        <label>Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ndebele</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Arabic(Algeria)</fullName>
                </value>
                <value>
                    <fullName>French(Algeria)</fullName>
                </value>
                <value>
                    <fullName>Spanish(Latin_America)</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Dutch(Latin_America)</fullName>
                </value>
                <value>
                    <fullName>Papiamento</fullName>
                </value>
                <value>
                    <fullName>English(US)</fullName>
                </value>
                <value>
                    <fullName>French(Latin_America)</fullName>
                </value>
                <value>
                    <fullName>English(Australia)</fullName>
                </value>
                <value>
                    <fullName>German(Austria)</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Arabic(Bahrain)</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>French(Belgium)</fullName>
                </value>
                <value>
                    <fullName>Dutch(Belgium)</fullName>
                </value>
                <value>
                    <fullName>German(Belgium)</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>English(Botswana)</fullName>
                </value>
                <value>
                    <fullName>Tswana</fullName>
                </value>
                <value>
                    <fullName>Portuguese(Brazil)</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Khmer</fullName>
                </value>
                <value>
                    <fullName>English(Canada)</fullName>
                </value>
                <value>
                    <fullName>French(Canada)</fullName>
                </value>
                <value>
                    <fullName>Cree</fullName>
                </value>
                <value>
                    <fullName>Simplified_Chinese(China)</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Adoption_Probability__c</fullName>
        <description>CPQ-IQ-LC-12421: Percent out of total sites that will be adopted.</description>
        <label>Site Adoption Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>CPQ Country Master Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCMD-{00000}</displayFormat>
        <label>CPQ Country Master Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Country Master Datas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>